Adjust perfect solve popup on mobile

--- a/src/app/components/game/game.module.css
+++ b/src/app/components/game/game.module.css
@@ -99,7 +99,7 @@ because it was interfering with the positioning of the input element */
     .perfectPopup {
       text-shadow: 1px 1px 2px #000;
       font-size: 1.7rem;
-      top: 24%;
+      top: 23%;
       padding: 1px 8px;
       border-radius: 0.55rem;
     }
